--- a/02.5_Bonus_Learn_more_on_Lending_Club_dataset.ipynb
+++ b/02.5_Bonus_Learn_more_on_Lending_Club_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus: Learn more about the Lending Club dataset\n",
+    "## Learn more about the Lending Club dataset\n",
     "\n",
     "Visit the following Jupyter notebooks in Kaggle to learn more about the Lending Club dataset and on how different Kagglers approach data analysis. \n",
     "\n",
